--- a/action.yml
+++ b/action.yml
@@ -8,6 +8,9 @@ inputs:
   slack_channel_name:
     description: 'Name of the slack channel where the bot should post the QA gate message.'
     required: true
+  slack_message_ts:
+    description: 'Timestamp of the Slack message to be updated'
+    required: true
 
   app_endpoint:
     description: 'Endpoint of the environment that was deployed as part of this pipeline. If there is not an endpoint you have exposed, just use the git repo URL where the pipeline is being run.'
@@ -32,6 +35,7 @@ runs:
   args:
     - ${{ inputs.slack_bot_token }}
     - ${{ inputs.slack_channel_name }}
+    - ${{ inputs.slack_message_ts }}
 
     - ${{ inputs.app_endpoint }}
     - ${{ inputs.app_name }}
